--- a/Develop/index.html
+++ b/Develop/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon</title>
 </head>
    
 <body>
-    <div class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <!--changed div tags to header tags-->
+    <header class="header">
+                <!--changed span tag to em tag-->
+        <h1>Hori<em class="seo">seo</em>n</h1>
         <div>
             <ul>
                 <li>
@@ -24,68 +26,71 @@
                 </li>
             </ul>
         </div>
-    </div>
-    <div class="hero"></div>
-    <div class="content">
+    </header>
+    <section class="hero"></section>
+        <!--changed div tags in this section to main and section tags-->
+    <main class="content">
                     <!--added missing id attribute-->
-        <div id="search-engine-optimization" class="search-engine-optimization">
+        <section class="search-engine-optimization" id="search-engine-optimization">
                         <!--added alt attibute-->
             <img src="./assets/images/search-engine-optimization.jpg"alt="a notebook" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        </section>
+        <section class="online-reputation-management" id="online-reputation-management">
                         <!--added alt attibute-->
             <img src="./assets/images/online-reputation-management.jpg" alt="a man using a laptop" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        </section>
+        <section class="social-media-marketing" id="social-media-marketing">
                         <!--added alt attibute-->
             <img src="./assets/images/social-media-marketing.jpg" alt="people working on a table" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </div>
-    <div class="benefits">
-        <div class="benefit-lead">
+        </section>
+    </main>
+        <!--changed div tags in this section to aside and section tags-->
+    <aside class="benefits">
+        <section class="benefit-lead">
             <h3>Lead Generation</h3>
                                     <!--added alt attibute-->
             <img src="./assets/images/lead-generation.png" alt="a sprocket turning into money" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </section>
+        <section class="benefit-brand">
             <h3>Brand Awareness</h3>
                                     <!--added alt attibute-->
             <img src="./assets/images/brand-awareness.png" alt="a lightbulb" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </section>
+        <section class="benefit-cost">
             <h3>Cost Management</h3>
                                     <!--added alt attibute-->
             <img src="./assets/images/cost-management.png" alt="coins and a sprocket"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
-    <div class="footer">
+        </section>
+    </aside>
+        <!--changed div tag in this section to a footer tag-->
+    <footer class="footer">
                                 <!--changed header for sequential order-->
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
