added comments to css file

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>Horiseon Online Management</title>
 </head>
    
 <body>
@@ -13,7 +13,7 @@
     <header class="header">
                 <!--changed span tag to em tag-->
         <h1>Hori<em class="seo">seo</em>n</h1>
-        <div>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -25,7 +25,7 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </header>
     <section class="hero"></section>
         <!--changed div tags in this section to main and section tags-->
