added readme content

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -31,7 +31,7 @@
         <!--changed div tags in this section to main and section tags-->
     <main class="content">
                     <!--added missing id attribute-->
-        <section class="search-engine-optimization" id="search-engine-optimization">
+        <section class="SEO" id="search-engine-optimization">
                         <!--added alt attibute-->
             <img src="./assets/images/search-engine-optimization.jpg"alt="a notebook" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -39,7 +39,7 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <section class="online-reputation-management" id="online-reputation-management">
+        <section class="SEO" id="online-reputation-management">
                         <!--added alt attibute-->
             <img src="./assets/images/online-reputation-management.jpg" alt="a man using a laptop" class="float-right" />
             <h2>Online Reputation Management</h2>
@@ -47,7 +47,7 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section class="social-media-marketing" id="social-media-marketing">
+        <section class="SEO" id="social-media-marketing">
                         <!--added alt attibute-->
             <img src="./assets/images/social-media-marketing.jpg" alt="people working on a table" class="float-left" />
             <h2>Social Media Marketing</h2>
@@ -58,7 +58,7 @@
     </main>
         <!--changed div tags in this section to aside and section tags-->
     <aside class="benefits">
-        <section class="benefit-lead">
+        <section class="benefit">
             <h3>Lead Generation</h3>
                                     <!--added alt attibute-->
             <img src="./assets/images/lead-generation.png" alt="a sprocket turning into money" />
@@ -66,7 +66,7 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <section class="benefit-brand">
+        <section class="benefit">
             <h3>Brand Awareness</h3>
                                     <!--added alt attibute-->
             <img src="./assets/images/brand-awareness.png" alt="a lightbulb" />
@@ -74,7 +74,7 @@
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <section class="benefit-cost">
+        <section class="benefit">
             <h3>Cost Management</h3>
                                     <!--added alt attibute-->
             <img src="./assets/images/cost-management.png" alt="coins and a sprocket"></img>
